# FeedFusion

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
public/: splashscreen.html
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  local_db.db3  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/internal/: api.rs  feed.rs  feed_config.rs  mod.rs  rss.rs  sqliteDB.rs  sqlite_db.rs
src-tauri/src/internal/api/: endpoints.rs
src-tauri/src/internal/app_initialization/: mod.rs  tauri_init.rs
src-tauri/src/internal/core/: core_functions.rs  mod.rs
src-tauri/src/internal/dbo/: article.rs  entry.rs  feed.rs  mod.rs
src/components/PageLayouts/: Base.jsx
src/components/Routes/: Home.jsx
src/components/contexts/: FeedProvider.jsx  SelectedFeedContext.jsx
src/components/general/: AddFeedModal.jsx  Article.jsx  ArticleCard.jsx  ArticleModal.jsx  Articles.jsx  FeedList.jsx  Message.jsx  Navbar.jsx  Sidebar.jsx
src/components/general/About/: AboutCard.css  AboutCard.jsx
src/components/general/FeedDisplay/: FeedDisplay.module.css  FeedItem.jsx  FeedList.jsx  FeedSettingsModal.jsx
src/pages/: About.jsx  NotFound.jsx
