[package]
name = "FeedFusion"
version = "0.1.0"
description = "An Open Source RSS / ATOM Feed Reader"
authors = ["Chris Conlon", "John Liu", "Andrew Christian"]
license = "MIT License"
repository = "https://github.com/Development-Corps/FeedFusion"
default-run = "FeedFusion"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
config = "0.14.0"
tauri = { version = "1.6.4", features = [] }
serde_yaml = "0.9.34"
lazy_static = "1.4.0"
url = "2.5.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.11", features = ["blocking"] }
rss = "2.0.8"
atom_syndication = "0.12.3"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
